ags (3.0.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed Makefile.am wrong destination directory variables of gtk-doc

ags (3.0.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed 64 bit portability issue with ags_functional_pitch_test.c
	* fixed 64 bit portability issue with ags_functional_fourier_transform_test.c
	* fixed ags_start_audio_test.c to run task within thread tree
	* fixed ags_start_channel_test.c to run task within thread tree
	* improved pulseaudio connect timeout
	* improved Makefile.am to deal with different gtk-doc locations

ags (3.0.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_audio_start() and ags_channel_start() to have sync timeout
	* fixed some issues from build log
	* fixed potential SIGSEGV by flaging AgsRecallID terminating state
	* fixed potential data-race related to AgsTaskLauncher

ags (3.0.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing prefix in autoconf option

ags (3.0.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved Makefile.am to be more portable
	* updated libags.pc, libags_audio.pc, libags_gui.pc and libgsequencer.pc

ags (3.0.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential recursive callback call
	* fixed potential data-race in ags_audio_stop() by stop thread first
	* fixed potential data-race in ags_channel_stop() by stop thread first

ags (3.0.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* migrated to Gtk3
	* migrated AgsOscServer and AgsOscClient to GIO sockets
	* migrated AgsServer to Libsoup XMLRPC
	* migrated AgsThread to GThread API
	* implemented introspection support
	* added G_BEGIN_DECLS and G_END_DECLS to header files
	* moved ags_thread-posix.[ch] to ags_thread.[ch]
	* removed ags_thread_file_xml.[ch], ags_audio_file_xml.[ch] and ags_gui_file_xml.[ch]
	* removed AgsTaskThread
	* removed AgsPollingThread